# word-freq-counter

./: Cargo.toml  README.md
src/: core.rs  init.rs  main.rs
