[package]
name = "word-freq-counter"
version = "0.1.0"
authors = ["GarthTB <g-art-h@outlook.com>"]
edition = "2021"
description = "中文语料的盲分词词频统计工具"
license = "Apache-2.0"
repository = "https://github.com/GarthTB/word-freq-counter"
keywords = ["nlp", "chinese", "word-frequency", "word-cloud", "corpus"]
readme = "README.md"
categories = ["command-line-utilities"]

[dependencies]
dashmap = "6"
rayon = "1"
